--- a/ui/frontend/editor/Editor.module.css
+++ b/ui/frontend/editor/Editor.module.css
@@ -3,6 +3,12 @@
   position: relative;
 }
 
+.withviz {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-gap: 20px;
+}
+
 .-advanced {
   composes: -bodyMonospace -autoSize from '../shared.module.css';
   position: absolute;
